clase 2 formularios, algunas mejoras en VsCode

--- a/01-Introduccion/Primera_web.html
+++ b/01-Introduccion/Primera_web.html
@@ -10,5 +10,10 @@
     <h1>Hola Mundo</h1> 
     <p>contenido</p>
     <!-- Comentarios -->
+    <!-- //?comentario */ -->
+    <!-- //!comentario */ -->
+    <!-- //*comentario */ -->
+    <!-- //todo comentario */ -->
+    <!-- // comentario */ -->
 </body>
 </html>
