resuelto ej nº4

--- a/04-Intro-css/Ej nº4/ej-Nº4.html
+++ b/04-Intro-css/Ej nº4/ej-Nº4.html
@@ -22,6 +22,25 @@ Modifica el CSS para que el primer elemento de cada lista se muestre de color ro
 A través del encadenamiento de selectores, haz que el primer elemento de la primera lista tenga un tamaño de letra de 2rem -->
 
 <body>
-    
+    <h1 id="título" class="encabezado">Lista de compra</h1>
+    <div>
+        <ul>
+            <li id="elemento-1">Churrasco</li>
+            <li id="elemento-2">Cerveza</li>
+            <li id="elemento-3">Café</li>
+            <li id="elemento-4">Crema</li>
+            <li id="elemento-5">Sal</li>
+        </ul>
+    </div>
+    <div>
+        <ol>
+            <li id="elemento-1">Coto</li>
+            <li id="elemento-2">Dia %</li>
+            <li id="elemento-3">Carrefour</li>
+            <li id="elemento-4">Chino 1</li>
+            <li id="elemento-5">Chino 2</li>
+        </ol>
+    </div>
+
 </body>
 </html>
