--- a/09-Animaciones/Ej Nº9 animaciones/Animaciones y transiciones en CSS.html
+++ b/09-Animaciones/Ej Nº9 animaciones/Animaciones y transiciones en CSS.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div>
-        <button class="btn-modern">El botón</button>
+        <button class="btn-modern">El botón moderno</button>
     </div>
 </body>
 </html>
