--- a/12-Bootstrap elementos/Tarjetas.html
+++ b/12-Bootstrap elementos/Tarjetas.html
@@ -12,10 +12,12 @@
 
 <body>
     <div class="container  py-4">
-        <div class="card " style="width: 15rem"><!--ayuda con el taño en general mas aún si la imagen es muy grande-->
+        <div class="card " style="width: 15rem">
+            <!--ayuda con el taño en general mas aún si la imagen es muy grande-->
             <div class="card-header">Este es el encabezado</div>
 
-            <div class="card-body">     <!--*cuerpo de la tarjeta-->
+            <div class="card-body">
+                <!--*cuerpo de la tarjeta-->
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">Este es el body de la tarjeta</p>
                 <ul class="list-group list-group-flush">
@@ -30,25 +32,29 @@
             </div>
 
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1d/Blue_Zurich_%2831895270053%29.jpg/1200px-Blue_Zurich_%2831895270053%29.jpg"
-                class="card-img-bottom" alt="imagen" /> <!--? top o bottom dice si redondea arriba o abajo a la imagen para ubicar depende de donde la ubico en el código-->
+                class="card-img-bottom" alt="imagen" />
+            <!--? top o bottom dice si redondea arriba o abajo a la imagen para ubicar depende de donde la ubico en el código-->
 
-                <div class="card-header card-text bg-info">El encabezado</div>
+            <div class="card-header card-text bg-info">El encabezado</div>
 
-                <div class="card-body">     <!--*cuerpo de la tarjeta-->
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text bg-danger">Perdí un rato tratando de que las tarjetas se vean una al lado de la otra, Buscar la manera!!</p>
-                    <ul class="list-group list-group-flush">
-                        <li class="list-group-item">Item 1</li>
-                        <li class="list-group-item">Item 2</li>
-                    </ul>
-                </div>
-    
-                <div class="card-footer">
-                    <button class="btn btn-primary btn-sm">Llamada a la acción</button>
-                </div>
-    
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1d/Blue_Zurich_%2831895270053%29.jpg/1200px-Blue_Zurich_%2831895270053%29.jpg"
-                    class="card-img-bottom" alt="imagen" /> <!--? top o bottom dice donde va la imagen-->
+            <div class="card-body">
+                <!--*cuerpo de la tarjeta-->
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text bg-danger">Perdí un rato tratando de que las tarjetas se vean una al lado de la
+                    otra, Buscar la manera!!</p>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">Item 1</li>
+                    <li class="list-group-item">Item 2</li>
+                </ul>
+            </div>
+
+            <div class="card-footer">
+                <button class="btn btn-primary btn-sm">Llamada a la acción</button>
+            </div>
+
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1d/Blue_Zurich_%2831895270053%29.jpg/1200px-Blue_Zurich_%2831895270053%29.jpg"
+                class="card-img-bottom" alt="imagen" />
+            <!--? top o bottom dice donde va la imagen-->
         </div>
 
 
