--- a/14-15 Proyecto/HTML/GusProyecto.html
+++ b/14-15 Proyecto/HTML/GusProyecto.html
@@ -14,25 +14,59 @@
     <link rel="stylesheet" href="/14-15 Proyecto/css/styles.css">
 </head>
 
-<body>proyecto final
-    <div class="container">
+<body>
+    <!-- <div class="container">
         <button class="btn-main">Botón Main</button>
         <button class="btn-main-s">Botón Main</button>
         <button class="btn-sec">Botón sec</button>
         <button class="btn-sec-s">Botón sec</button>
-        <ul class="main-menu">
-            <li>Prices</li>
-            <li>Learn</li>
-            <li>Individuals</li>
-            <li>Businesses</li>
-            <li>Developers</li>
-            <li>Company</li>
-        </ul>
+        
         <span class="icon-sm">
             <i class="bi bi-code-square"></i>
         </span>
-    </div>
+        <div class="feature">
+            <i class="bi bi-eye-fill icon"></i>
+            <div class="description">
+                <h3 class="title">Secure storage</h3>
+                <p class="text">We store your data Lorem ipsum dolor sit, bla bla bla bla bla bla bla bla bla bla bla bla. Hic!</p>
+            </div>
+            <p class="cta">call to action</p>
+        </div>
+        <div class="icon-desk">
+            <i class="bi bi-person-plus-fill icon"></i>
+            <h3 class="title">Create Account</h3>
 
+        </div>
+    </div> -->
+    <nav class="nav">
+        <!--esta sección tiene 3 componentes-->
+        <div class="logo">
+            <a href="#">
+                <img src="/14-15 Proyecto/Assets/img/logo.png" alt="logo coinbase">
+            </a>
+        </div>
+        <div class="menu">
+            <ul class="main-menu">
+                <li><a href="#">Prices</a></li>
+                <li><a href="#">Learn</a></li>
+                <li><a href="#">Individuals</a></li>
+                <li><a href="#">Businesses</a></li>
+                <li><a href="#">Developers</a></li>
+                <li><a href="#">Company</a></li>
+            </ul>
+        </div>
+        <div class="get-started">
+            <button class="btn-sec-s">Sing In</button>
+            <button class="btn-main-s">Get Started</button>
+        </div>
+    </nav>
+    <section class="sec-home"></section>
+    <section class="sec-call-to-action"></section>
+    <section class="sec-features"></section>
+    <section class="sec-benefits"></section>
+    <section class="sec-kpis"></section>
+    <section class="sec-onboarding"></section>
+    <section class="sec-footer-cta"></section>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
