--- a/14-15 Proyecto/HTML/GusProyecto.html
+++ b/14-15 Proyecto/HTML/GusProyecto.html
@@ -45,7 +45,8 @@
                 <img src="/14-15 Proyecto/Assets/img/logo.png" alt="logo coinbase">
             </a>
         </div>
-        <div class="menu">
+        <div class="menu d-none d-md-block">
+            <!--? con las instrucciones le digo que si menú es mas pequeño que md no se muestre -->
             <ul class="main-menu">
                 <li><a href="#">Prices</a></li>
                 <li><a href="#">Learn</a></li>
@@ -60,9 +61,89 @@
             <button class="btn-main-s">Get Started</button>
         </div>
     </nav>
-    <section class="sec-home"></section>
+
+
+    <section class="sec-home">
+        <div class="home-cta">
+            <div class="cta-text">
+                <span>Jump Start Your Portfolio</span>
+                <i class="bi bi-arrow-right"></i>
+            </div>
+            <h2 class="home-title h1">Jump start your crypto portfolio</h2>
+            <p class="home-description">Coinbase is the easiest to buy and sell cryptocurrency. Sing up and get started
+                today </p>
+            <div class="lead-magnet row align-items-center">
+                <!--pongo todo en una fila...-->
+                <div class="col">
+                    <input type="text" class="form-control" placeholder="Email address">
+                </div>
+                <div class="col">
+                    <button class="btn-main">Get Started</button>
+                </div>
+            </div>
+        </div>
+        <div class="home-img">
+            <img src="/14-15 Proyecto/Assets/img/wallet.png" alt="wallet">
+        </div>
+    </section>
+
+
     <section class="sec-call-to-action"></section>
-    <section class="sec-features"></section>
+
+
+    <section class="sec-features">
+        <div class="intro">
+            <h3>Create your cryptocurrency portfolio today</h3>
+            <p>Coinbase has a variety of features that make it the best place to start trading</p>
+        </div>
+        <div class="features">
+            <div class="text">
+                <div class="feature">
+                    <span class="icon-sm">
+                        <!--* este icon ya fue estilado antes-->
+                        <i class="bi bi-graph-up"></i>
+                    </span>
+                    <div class="description">
+                        <h4 class="description-title">Manage your portfolio</h4>
+                        <p class="description-text">Buy and sell popular digital currencies, keep track of them in the
+                            one place.</p>
+                    </div>
+                </div>
+
+
+                <div class="feature">
+                    <span class="icon-sm">
+                        <!--* este icon ya fue estilado antes-->
+                        <i class="bi bi-calendar-check"></i>
+                    </span>
+                    <div class="description">
+                        <h4 class="description-title">Recurring buys</h4>
+                        <p class="description-text">Invest in cryptocurrency slowly over time by scheduling buys, daily,
+                            weekly or monthly.</p>
+                    </div>
+                </div>
+
+
+                <div class="feature">
+                    <span class="icon-sm">
+                        <!--* este icon ya fue estilado antes-->
+                        <i class="bi bi-phone"></i>
+                    </span>
+                    <div class="description">
+                        <h4 class="description-title">Mobile Apps</h4>
+                        <p class="description-text">Stay on top of the markets with the coinbase app for Android or iOS
+                        </p>
+                    </div>
+                </div>
+
+            </div>
+            <div class="image">
+                <img src="/14-15 Proyecto/Assets/img/chart.png" alt="chart">
+            </div>
+        </div>
+    </section>
+
+
     <section class="sec-benefits"></section>
     <section class="sec-kpis"></section>
     <section class="sec-onboarding"></section>
