15-12-2022 orden en el md

--- a/02-Forms-Tables/Formularios y botones.html
+++ b/02-Forms-Tables/Formularios y botones.html
@@ -19,6 +19,10 @@
       </div>
       <br />
       <div>
+        <!-- <input type="checkbox" name="hola" id="dddddd"> solo una prueba no estaba en la clase -->
+        <br>
+      </div>
+      <div>
         <label for="password">Contraseña</label>
         <!-- * documentación para entender for, name, id en: https://www.w3schools.com/tags/ref_attributes.asp -->
         <input type="password" name="Clave" id="password" required />
