--- a/01-Introduccion/Etiquetas_Habituales.html
+++ b/01-Introduccion/Etiquetas_Habituales.html
@@ -7,7 +7,7 @@
 
 <body>
   <h1>Encabezado 1</h1>
-  <h2>Encabezado 2</h2>
+  <h2 style="position: absolute;">Encabezado 2</h2>
   <h3>Encabezado 3</h3>
   <h4>Encabezado 4</h4>
   <h5>Encabezado 5</h5>
@@ -19,6 +19,7 @@
   <p>Paragraph</p>
   <a href="https://google.com">Enlace externo</a><!-- a == anchor etiqueta para hipervínculos-->
   <a href="Primera_web.html">Enlace interno</a><!-- a == anchor etiqueta para hipervínculos-->
+  <a href="mailto:gustavominchiotti@gmail.com">mi mail personal</a>     <!--* no esta en la clase es por el examen-->
   <div>
     <h3>Listas</h3>
     <div>
